--- a/app/src/main/res/layout/item_wall_feed.xml
+++ b/app/src/main/res/layout/item_wall_feed.xml
@@ -35,8 +35,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="User Name"
-                    android:textStyle="bold"
-                    android:textColor="@color/text" />
+                    android:textColor="@color/text"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/time"
@@ -53,10 +53,44 @@
 
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/description"
+            android:layout_marginTop="8dp"
             android:textColor="@color/black" />
+
+        <ImageView
+            android:id="@+id/pic"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/place_holder" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="Likes"
+                android:textColor="@color/grey5"
+                android:id="@+id/likes"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginLeft="16dp"
+                android:text="Comments"
+                android:textColor="@color/grey5"
+                android:id="@+id/comments"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
