--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,6 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
         <include
             android:id="@+id/empty"
             layout="@layout/item_empty"
@@ -36,24 +37,24 @@
         <com.xw.repo.XEditText
             android:id="@+id/message"
             android:layout_width="0dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:paddingLeft="16dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:drawableTint="@color/dark_grey"
             android:hint="Message"
+            android:paddingLeft="16dp"
             app:x_clearDrawable="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/send"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:tint="@color/colorPrimary"
-            android:src="@mipmap/ic_send" />
+            android:src="@mipmap/ic_send"
+            android:tint="@color/colorPrimary" />
 
     </LinearLayout>
 
