--- a/app/src/main/res/layout/activity_vendor_meeting_room_slots.xml
+++ b/app/src/main/res/layout/activity_vendor_meeting_room_slots.xml
@@ -36,27 +36,27 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:src="@drawable/place_holder"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:layout_height="match_parent" />
+                    android:src="@drawable/place_holder" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#3c000000"/>
+                    android:background="#3c000000" />
 
 
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Name"
-                    android:textStyle="bold"
                     android:layout_alignParentBottom="true"
                     android:layout_margin="16dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Name"
                     android:textColor="@color/white"
-                    android:textSize="25sp" />
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
 
             </RelativeLayout>
@@ -80,57 +80,63 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_days"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/list_item_size"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="16dp"
-                app:cardCornerRadius="4dp">
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false" />
 
-                <LinearLayout
-                    android:id="@+id/book"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+            <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/list_item_size"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--android:layout_marginRight="16dp"-->
+            <!--app:cardCornerRadius="4dp">-->
 
-                    <ImageView
-                        android:id="@+id/previous"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:src="@drawable/ic_chevron_left" />
+            <!--<LinearLayout-->
+            <!--android:id="@+id/book"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal">-->
 
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="Book Meeting Room"
-                        android:textColor="@color/grey10"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/next"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:src="@drawable/ic_chevron_right" />
+            <!--<ImageView-->
+            <!--android:id="@+id/previous"-->
+            <!--android:layout_width="25dp"-->
+            <!--android:layout_height="25dp"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:src="@drawable/ic_chevron_left" />-->
 
 
-                </LinearLayout>
+            <!--<TextView-->
+            <!--android:id="@+id/name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Book Meeting Room"-->
+            <!--android:textColor="@color/grey10"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textStyle="bold" />-->
 
-            </android.support.v7.widget.CardView>
+            <!--<ImageView-->
+            <!--android:id="@+id/next"-->
+            <!--android:layout_width="25dp"-->
+            <!--android:layout_height="25dp"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:src="@drawable/ic_chevron_right" />-->
+
+
+            <!--</LinearLayout>-->
+
+            <!--</android.support.v7.widget.CardView>-->
 
 
             <android.support.v7.widget.RecyclerView
