--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Enter credentials given by your workspace"
+            android:text="Enter your registered mobile number for OTP"
             android:textColor="@color/grey7"
             android:textSize="15sp" />
 
@@ -42,16 +42,18 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/mobile_cont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/et_email"
+                    android:id="@+id/et_mobile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="Enter Mobile"
                     android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress|textNoSuggestions"
+                    android:inputType="number"
+                    android:maxLength="10"
                     android:textColor="@color/grey10"
                     android:textSize="14sp" />
 
@@ -59,35 +61,54 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/otp_cont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:passwordToggleEnabled="true">
+                android:visibility="gone">
 
                 <EditText
-                    android:id="@+id/et_password"
+                    android:id="@+id/et_otp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="OTP"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="number"
+                    android:maxLength="4"
                     android:textColor="@color/grey10"
                     android:textSize="14sp" />
 
 
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/forgot_password"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="8dp"
                 android:layout_marginBottom="32dp"
-                android:text="Forgot Password?"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/edit_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Edit Number"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/resend"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="Didn't receive? Resend"
+                    android:textColor="@color/grey8"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
