--- a/app/src/main/res/layout/activity_vendors.xml
+++ b/app/src/main/res/layout/activity_vendors.xml
@@ -328,17 +328,29 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <TextView
                     android:id="@+id/logout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
                     android:background="@drawable/btn_grey0"
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:text="Logout"
                     android:textColor="@color/textSecondary"
                     android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/app_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/bg"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="App Version Code - 1, Version Info - 3.4"
+                    android:textColor="@color/textDisabled"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
