added meeting room dashboard and few bug fixes

--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -34,6 +34,7 @@
                     android:layout_height="60dp"
                     android:background="@color/white"
                     android:hint="Search event name"
+                    android:maxLines="1"
                     android:padding="16dp" />
             </LinearLayout>
 
