--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,10 @@
     android:background="@color/bg"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/no_navigation_toolbar"
-        android:visibility="gone" />
+    <!--<include-->
+        <!--android:id="@+id/toolbar"-->
+        <!--layout="@layout/no_navigation_toolbar"-->
+        <!--android:visibility="gone" />-->
 
 
     <LinearLayout
