--- a/app/src/main/res/layout/activity_nearby_workspaces.xml
+++ b/app/src/main/res/layout/activity_nearby_workspaces.xml
@@ -35,6 +35,7 @@
                     android:layout_height="60dp"
                     android:background="@color/white"
                     android:hint="Search"
+                    android:maxLines="1"
                     android:padding="16dp" />
             </LinearLayout>
 
