--- a/app/src/main/res/layout/activity_vendor_members.xml
+++ b/app/src/main/res/layout/activity_vendor_members.xml
@@ -34,6 +34,7 @@
                     android:layout_height="60dp"
                     android:background="@color/white"
                     android:hint="Search"
+                    android:maxLines="1"
                     android:padding="16dp" />
             </LinearLayout>
 
