--- a/app/src/main/res/layout/item_meeting_room_slot.xml
+++ b/app/src/main/res/layout/item_meeting_room_slot.xml
@@ -1,9 +1,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_size"
+    android:layout_height="50dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    app:cardElevation="1dp"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -17,6 +18,7 @@
             android:id="@+id/logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:visibility="gone"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp" />
@@ -26,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="4dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:orientation="horizontal">
