--- a/app/src/main/res/layout/activity_vendor_members.xml
+++ b/app/src/main/res/layout/activity_vendor_members.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:padding="4dp"
+            android:visibility="gone"
             app:cardCornerRadius="4dp">
 
             <LinearLayout
