--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,6 +34,7 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/companies"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/list_item_size"
                     android:clickable="true">
@@ -68,6 +69,7 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/members"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/list_item_size"
                     android:layout_marginTop="@dimen/item_spacing">
@@ -103,8 +105,7 @@
                 <android.support.v7.widget.CardView
                     android:id="@+id/events"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/list_item_size"
-                    android:layout_marginTop="@dimen/item_spacing">
+                    android:layout_height="@dimen/list_item_size">
 
                     <LinearLayout
                         android:layout_width="match_parent"
