--- a/app/src/main/res/menu/meeting_room.xml
+++ b/app/src/main/res/menu/meeting_room.xml
@@ -4,8 +4,7 @@
     tools:context="com.celerstudio.wreelysocial.views.activity.ScrollingActivity">
     <item
         android:id="@+id/action_history"
-        android:icon="@drawable/ic_action_history"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_history"
         app:showAsAction="always" />
 </menu>
